[gd_scene load_steps=11 format=3 uid="uid://bxn5itjx28p6"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_w3mig"]
[ext_resource type="Texture2D" uid="uid://xihcltoe6ytq" path="res://assets/characters/slime.png" id="2_y0l2n"]

[sub_resource type="Animation" id="Animation_gahm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slime:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 12)]
}

[sub_resource type="Animation" id="Animation_73pt2"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slime:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 12), Vector2i(1, 12), Vector2i(2, 12), Vector2i(3, 12), Vector2i(4, 12)]
}

[sub_resource type="Animation" id="Animation_j2e0c"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_tyagf"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gghvp"]
_data = {
"RESET": SubResource("Animation_gahm5"),
"dead": SubResource("Animation_73pt2"),
"idle": SubResource("Animation_j2e0c"),
"walk": SubResource("Animation_tyagf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jkj3s"]
radius = 73.0069

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4oy46"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dykme"]
radius = 8.0
height = 20.0

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_w3mig")

[node name="Slime" type="Sprite2D" parent="."]
position = Vector2(1, -2)
texture = ExtResource("2_y0l2n")
hframes = 7
vframes = 13
frame = 84

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gghvp")
}

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_jkj3s")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_jkj3s")

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("RectangleShape2D_4oy46")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_dykme")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="on_body_exited"]
[connection signal="area_entered" from="CollisionArea" to="." method="kill"]
